plaatnotes: Add user model and controller
