# bin/plaatnotes/src/main.rs
@@ -32,6 +32,11 @@ pub(crate) fn router(ctx: Context) -> Router<Context> {
         .pre_layer(layers::cors_pre_layer)
         .post_layer(layers::cors_post_layer)
         .get("/api", home)
+        .get("/api/users", users_index)
+        .post("/api/users", users_create)
+        .get("/api/users/:user_id", users_show)
+        .put("/api/users/:user_id", users_update)
+        .delete("/api/users/:user_id", users_delete)
         .get("/api/notes", notes_index)
         .post("/api/notes", notes_create)
         .get("/api/notes/:note_id", notes_show)
